--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -9,7 +9,7 @@ platform: cloud
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/admin/)
 </Admonition>
 
-When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for collaborators to use that instance. If you want to customize an access group or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
+When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for collaborators to use that instance. If you want to customize that access group or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
 
 An _access group_ contains _policies_, which define the actions that access group members can take on specific resources, such as services.  In this guide, the resource is generally an IBM Quantum _service instance_.
 
@@ -17,7 +17,7 @@ An _access group_ contains _policies_, which define the actions that access grou
 After an access group is created, you can invite users to the group by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page in the left-hand menu.
 </Admonition>
 
-You can create an access group by using the IBM Cloud [user interface,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui) [CLI,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=cli) [API,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=api) or [Terraform.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=terraform)
+You can create an access group by using the IBM Cloud [console,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui) [CLI,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=cli) [API,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=api) or [Terraform.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=terraform)
 
 ## Create an IBM Quantum Administrators access group
 After setting up an account for your organization, it's recommended that you create an  IBM Quantum Administrators access group. This access group lets other users  create and manage instances, and manage user access for the Qiskit Runtime service.
@@ -34,18 +34,18 @@ When you create this access group, include the following policies:
 
 
 <Admonition type="note">
-  Users with the `viewer` platform management role on all account management services can also view all account management services, such as billing. To prevent this extra view access, use the IBM Cloud CLI to give them access to just Resource groups:
+  Users with the `viewer` platform management role on "all account management services" can also view services such as billing. To prevent this extra view access, use the IBM Cloud CLI to give them access to just Resource groups:
   ```cli
   ibmcloud iam access-group-policy-create <group name> --roles Viewer --resource-type resource-group
   ```
 </Admonition>
 
-Examples:
+Follow these examples to create an Administrators access group by using the IBM Cloud CLI or console.
 
 <span id="cli"></span>
 ### Use the IBM Cloud CLI
 
-To create an _access group_ by using the CLI, use the [`ibmcloud iam access-group-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create)] command.
+To create an _access group_ by using the CLI, use the [`ibmcloud iam access-group-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create) command.
 
 ```cli
 ibmcloud iam access-group-create GROUP_NAME [-d, --description DESCRIPTION]
@@ -53,14 +53,13 @@ ibmcloud iam access-group-create GROUP_NAME [-d, --description DESCRIPTION]
 
 To create an access group _policy_ by using the CLI, use the [`ibmcloud iam access-group-policy-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create) command.
 
-- All IAM Account Management services (Administrator)
-
 ```cli
 ibmcloud iam access-group-policy-create GROUP_NAME {-f, --file @JSON_FILE | --roles ROLE_NAME1,ROLE_NAME2... [--service-name SERVICE_NAME] [--service-instance SERVICE_INSTANCE] [--region REGION] [--resource-type RESOURCE_TYPE] [--resource RESOURCE] [--resource-group-name RESOURCE_GROUP_NAME] [--resource-group-id RESOURCE_GROUP_ID]}
 ```
 
-You can use the following JSON code to create an Administrators access group:
+You can use the following JSON code to create policies for an Administrators access group:
 
+- All IAM Account Management services (administrator)
 ```json
 {
     "type": "access",
@@ -85,6 +84,7 @@ You can use the following JSON code to create an Administrators access group:
     ]
 }
 ```
+
 - All Account Management services (viewer)
 ```json
 {
@@ -141,7 +141,7 @@ You can use the following JSON code to create an Administrators access group:
 ```
 
 <span id="ui"></span>
-### Use the IBM Cloud IAM user interface
+### Use the IBM Cloud IAM console
 
 As an account owner or administrator, follow these steps to create an IBM Quantum Administrator access group.
 
