--- a/docs/guides/cloud-account-structure.mdx
+++ b/docs/guides/cloud-account-structure.mdx
@@ -65,7 +65,7 @@ The following table provides examples for some of the platform management action
 | Service access role | Qiskit Runtime actions                                               |
 |---------------------|----------------------------------------------------------------------|
 | Reader              | Perform read-only actions, such as viewing jobs                      |
-| Writer              | Permissions beyond the reader role, including running, updating, and deleting jobs           |
+| Writer              | Permissions beyond the reader role, including running, updating, and canceling jobs           |
 | Manager             | Permissions beyond the writer role, including provisioning instances and setting the instance cost limit |
 
 ## Next steps
