--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -12,7 +12,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 Follow these steps to set up IBM Quantum Platform.
 
 <span id="iam-org"></span>
-## Configure IAM settings
+## 1. Configure IAM settings
 
 First, configure the following settings in the administrator's IAM account. To review and configure these settings, go to [Manage → IAM → Settings](https://cloud.ibm.com/iam/settings).
 
@@ -20,14 +20,14 @@ First, configure the following settings in the administrator's IAM account. To r
 * **API key creation** controls whether users can create API keys. In IBM Quantum Platform, it is common to use API keys. If API keys are being used, choose `disabled`. Alternatively, you can give specific permissions to each user.
 
 <span id="crt-rsc-grp-org"></span>
-## (Optional) Create resource groups
+## 2. (Optional) Create resource groups
 
 Skip this step if you are using access groups that directly reference IBM Quantum service instances.
 
 If you chose to use resource groups, go to [Manage → Account → Resource groups (in Account resources)](https://cloud.ibm.com/account/resource-groups) and click **Create**.
 
 <span id="create-instance-org"></span>
-## Create IBM Quantum service instances
+## 3. Create IBM Quantum service instances
 
 If you already created IBM Quantum service instances, skip this step.
 
@@ -37,46 +37,20 @@ If you already created IBM Quantum service instances, skip this step.
 Follow the steps in [Set up to use IBM Cloud](/guides/cloud-setup#cloud) for instructions.
 
 <span id="create-group-org"></span>
-## Create access groups for projects
+## 4. Create access groups for projects
 
-First, create a custom role that allows users to perform actions to work with IBM Quantum service instances for each access group. Next, create an access group for each project and give that group the minimum set of permissions that are required to work with the project resources. In a later step, you will map users to access groups.
-
-Follow these steps to set up an access group:
-
-1. Create a custom role.
-   1. From [Manage → IAM → Roles](https://cloud.ibm.com/iam/roles), click `Create`.
-   2. Enter a name, ID, description, and select `Qiskit Runtime` for the service.
-   3. Select the following roles, then click **Create**.
-      * quantum-computing.device.read
-      * quantum-computing.job.cancel
-      * quantum-computing.job.create
-      * quantum-computing.job.read
-      * quantum-computing.program.create
-      * quantum-computing.program.delete
-      * quantum-computing.program.read
-      * quantum-computing.program.update
-      * quantum-computing.user.logout
-      * Select quantum-computing.job.delete if you want to allow users to delete jobs.
-
-2. Create an access group.
-   1. Go to [Manage → IAM → Access groups](https://cloud.ibm.com/iam/groups) and click **Create**.
-   2. Enter a name, like `project-ml`, and a description.
-3. Assign access to the group.
-   1. Select the Access tab and click **Assign access**.
-   2. In the Service list, search for **Qiskit Runtime** and select it, then click **Next**.
-   3. In Resources, select **Specific resources**. For Attribute type, choose **Service Instance**.
-   4. From the drop-down list, select the service instance that you want to add to the access group, for example, `QR-ml`. If you are using resource groups, select the resource group instead of selecting individual service instances. Click **Next**.
-   5. For Roles and actions, select **Viewer** and the custom role that was created previously. Click **Add**, then **Assign**.
-   6. Repeat this step if you want to give an access group permission to several service instances.
+First, [create a custom role](/guides/custom-roles#custom) that allows users to perform actions to work with IBM Quantum service instances.
+Next, [create an access group](/guides/access-groups) for each project and give that group the minimum set of permissions that are required to work with the project resources.
 
 <span id="setup-idp-org"></span>
-## Set up your ID provider and assign users
+## 5. Set up your ID provider and assign users
 
 Follow the steps in the appropriate topic, depending on the ID provider you chose to use:
 
 * [Use IBM Cloud&reg; as the ID provider for users that have IBM Cloud accounts](/guides/manage-cloud-users)
 * [Use IBM Cloud as the ID provider for users that do not have IBM Cloud accounts](/guides/manage-appid#id-cloud)
 * [Use an ID provider other than IBM Cloud for users that do not have IBM Cloud accounts](/guides/manage-appid#id-provider)
+* [Invite users and manage their access](/guides/invite-and-manage-users)
 
 ## Next steps
 
