--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -174,7 +174,7 @@ Create a third policy for the same instance.
    - **Roles and actions** - For Platform access, select **Viewer**, Click **Next**.
    At the bottom, click **Add**, then click **Assign**.
 
-Finally, invite users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page.
+Finally, add users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page.
 
 <Admonition type="note">
 You can only invite users who are already members of the account.  If you don't see a user on the Add users page, follow the steps in [Invite and manage users](/guides/invite-and-manage-users#invite) to add them to the account first.  After they accept the invitation, you can add them to the access group.
