--- a/docs/guides/invite-and-manage-users.mdx
+++ b/docs/guides/invite-and-manage-users.mdx
@@ -23,7 +23,7 @@ If a user has a previously existing IBM Cloud account, follow the instructions i
 1. First, ensure you have the correct account and region selected in the account and region switchers in the header.
 1. Select [*Access management*](https://quantum.cloud.ibm.com/users) from the main menu.
 1. On the Users tab, click  "Invite user".
-1. Enter the users' email adddresses and optionally assign the invited users to access groups. To create an access group, see the [Create and manage access groups](/guides/access-groups) guide.
+1. Enter the users' email adddresses and optionally assign the invited users to access groups.
 1. The user will receive an invitation to create an IBM Cloud account and join the instance. After they accept the invitation, they will see a new account in their account switcher at the top of the IBM Quantum Platform page.
 
 
@@ -44,5 +44,5 @@ If a user is removed from an instance, their workloads and the associated result
 <Admonition type="tip" title="Recommendations">
    - Create [instances.](/guides/instances#add-instances)
    - Understand the [IBM Cloud account structure,](/guides/cloud-account-structure) including access policies, groups, and roles.
-   - Learn how to [set up access groups.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui)
+   - [Create and manage access groups.](/guides/access-groups)
 </Admonition>
