--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -5,15 +5,15 @@ platform: cloud
 ---
 # Set instance allocation limits
 
-An account may have allotted time on the premium plan. Because each account can have many premium plan instances, setting allocation limits helps you control which instances are allowed to consume that time.
+An account might have allotted time on the premium plan. Because each account can have many premium plan instances, setting allocation limits helps you control which instances are allowed to consume that time. Note that if the allocation is not set as a limit, the instance can use more than its alloted time.
 
 The time that you allocate to premium plan instances is used by the fair-share algorithm and determines the priority in the queue, based on usage of all QPUs over a rolling time window of 28 days.
 
-You can set the allocation when creating the instance.  Alternatively, you can view and change allocated time on the [instances page.](https://quantum.cloud.ibm.com/instances)
+The allocation is set when creating the instance.  However, you can view and change allocated time on the [instances page.](https://quantum.cloud.ibm.com/instances)
 
 ## What happens when the limit is reached
 
-You can optionally set this time allocation as a limit for the instance. The following happens when an instance reaches its limit:
+You can optionally set the time allocation as a limit for the instance. The following happens when an instance reaches its limit:
 
 - Active workloads continure running.
 - Pending jobs remain queued.
