--- a/docs/guides/invite-and-manage-users.mdx
+++ b/docs/guides/invite-and-manage-users.mdx
@@ -10,7 +10,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 </Admonition>
 
 <Admonition type="tip" title="Before you begin">
-Create your account's instances before you invite users. For every instance you create through IBM Quantum Platform, an associated [access group](/guides/access-groups) is automatically generated (unless you decline the automatically generated access group when you create the instance). When you invite users to an instance, you can assign them to a specific instance's access group as part of the invitation process.
+Create your account's instances before you invite users. For every instance you create through IBM Quantum Platform, an associated [access group](/guides/access-groups) is automatically generated. When you invite users to an instance, you can assign them to a specific instance's access group as part of the invitation process.
 </Admonition>
 
 <span id="invite"></span>
