--- a/docs/guides/invite-and-manage-users.mdx
+++ b/docs/guides/invite-and-manage-users.mdx
@@ -42,7 +42,7 @@ If a user is removed from an instance, their workloads and the associated result
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-   - Create [instances.](/guides/instances#add-instances)
+   - Create [instances.](/guides/instances#add-instance)
    - Understand the [IBM Cloud account structure,](/guides/cloud-account-structure) including access policies, groups, and roles.
    - [Create and manage access groups.](/guides/access-groups)
 </Admonition>
