--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -185,8 +185,10 @@ If you do not specify an instance, the code will select one in the following ord
    <Admonition type="note">
       If you customize the allocated compute resources, the available QPUs will never be automatically updated, regardless of any changes made to the parent plan.  However, you can manually add or remove QPUs later. If you do not customize them, you will always have access to any QPU the account has access on the plan. So if in the future there is a new system added to the plan, the instance automatically has access to it.
     </Admonition>
-1. By default, an access group is created for this instance. Users added to this access group can use the time allocated to this instance. If you do not want an access group to be automatically created for this instance, click the "Create access group automatically" toggle. You can [create access groups](/guides/access-groups) later by using the IBM Cloud console.
 1. Click **Create instance**. You can now view the instance on the Instances page (if you have set up multiple plans on your account, each plan type has its own tab on the Instances table).
+
+A "collaborators" access group is automatically created for this instance. Users added to this access group can use the time allocated to this instance. You can [modify or create additional access groups](/guides/access-groups) by using the IBM Cloud console.
+
 
 ## Edit an instance and its allocation
 
@@ -195,19 +197,19 @@ Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) pa
 <LegacyContent>
 ## Leave an instance
 
-To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose *Leave instance*.
+To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose **Leave instance**.
 
 ![Screenshot of the Account page.](/images/guides/leaving1.avif "Leave instance")
 </LegacyContent>
 
 ## Delete an instance
 
-Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the overflow menu at the end the instance's row, and select Delete.
+Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the overflow menu at the end the instance's row, and select **Delete**.
 
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-    - Review the [QiskitRuntimeService instances method](/api/qiskit-ibm-runtime/qiskit-runtime-service#instances) reference.
+    - [Work with access groups](/guides/access-groups)
+    - [Manage users.](/guides/invite-and-manage-users)
 </Admonition>
