Change to API key

--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -131,7 +131,7 @@
     "# authentication\n",
     "# If you have not previously saved your credentials, follow instructions at\n",
     "# https://docs.quantum.ibm.com/guides/functions\n",
-    "# to authenticate with your API token.\n",
+    "# to authenticate with your API key.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# load \"Singularity Machine Learning - Classification\" function by Multiverse Computing\n",
