--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -57,7 +57,7 @@ The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is
     service = QiskitRuntimeService.save_account(
         channel="ibm_cloud", # `channel` distinguishes between different account types
         token=token, # Your token is confidential.
-        # Do not share your token in public code.
+        # Do not share your key in public code.
         instance="<IBM Cloud CRN>",
         name="<account-name>", # Optionally name this set of account credentials.
         set_as_default=True, # Optionally set these as your default credentials.
@@ -80,12 +80,12 @@ The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is
       * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
       * If you don't save your credentials, you must specify them every time you start a new session.
 
-1. <span id="cloud-untrusted"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by deleting it on the [API keys page](https://cloud.ibm.com/iam/apikeys) and creating a new one.
+1. <span id="cloud-untrusted"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by deleting it on the [API keys page](https://cloud.ibm.com/iam/apikeys) and creating a new one.
 
     <Admonition type="caution">
-      **Protect your API token!** Never include your token in source code, Python script, or notebook file. When sharing code with others, ensure that your API token is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.
+      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.
 
-      If you accidentally share your token with someone or include it in version control like Git, immediately revoke your token by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud.
+      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud.
     </Admonition>
 
     To initialize the service in this situation, you can use code like the following:
@@ -95,7 +95,7 @@ The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is
 
     service = QiskitRuntimeService(
       channel="ibm_cloud",
-      # Delete your token on the API keys page after entering this code:
+      # Delete your key on the API keys page after entering this code:
       token="<IBM Cloud API key>",
       instance="<IBM Cloud CRN>"
       )
@@ -173,12 +173,12 @@ Because of the security risks posed by executing code that contains your API key
     api_token = os.environ['IQP_API_TOKEN']
     ```
 
-    Note that when creating an environment variable, your API token is still stored locally in plain text, and should be safeguarded.
+    Note that when creating an environment variable, your API key is still stored locally in plain text, and should be safeguarded.
 
 <details>
 <summary> **Click here for tips for running code on untrusted systems** </summary>
 
-1. <span id="rest-untrusted"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud. To initialize the service in this situation, use your API key directly:
+1. <span id="rest-untrusted"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud. To initialize the service in this situation, use your API key directly:
 
 ```python
 # Refresh your API key on the dashboard after using the code as follows:
