--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -237,7 +237,7 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 - Content additions and improvements
 
   <LegacyContent>
-  - Guidance to [securely manage your API token](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
+  - Guidance to [securely manage your API key](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
   </LegacyContent>
   <CloudContent>
   - Guidance to [securely manage your API key](/guides/cloud-setup)
