Organize guides images
Co-Authored-By: Gyan Ranjan <76723725+Gyan-max@users.noreply.github.com>

--- a/docs/guides/interoperate-qiskit-qasm2.mdx
+++ b/docs/guides/interoperate-qiskit-qasm2.mdx
@@ -48,7 +48,7 @@ circuit = qiskit.qasm2.loads(program)
 circuit.draw()
 ```
 
-![output](/images/guides/qasm2.avif)
+![output](/images/guides/interoperate-qiskit-qasm2/qasm2.avif)
 
 #### Example: import an OpenQASM 2 program from a file
 
