--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -23,7 +23,7 @@ Access to IBM Quantum Platform services is controlled by the **instances** (prev
   IBM Cloud&reg; instances are different from IBM Quantum Platform instances.  IBM Cloud does not use the hub/group/project structure for user management. This section describes instances in IBM Quantum Platform. To view and create IBM Cloud instances, visit the [IBM Cloud Quantum Instances page](https://cloud.ibm.com/quantum/instances). Click the name of an instance to see details such as your CRN for that instance, what compute resources are available to you by using that instance, and what jobs you have run on that instance.
 </Admonition>
 
-![Alice, Bob, and Charlie are all in Hub A.  Hub A has Group 1 and 2.  Alice and Bob are in Group 1.  Charlie is in Group 2.  Group 1 has Project X and Y.  Alice is in both projects.  Bob is only in project X.  Group 2 has Project Z.  Charlie is in project Z.  Therefore, Charlie's instance is Hub-A/Group-2/Project-Z.](/images/guides/providers1.avif "Hub / group / project hierarchy")
+![Alice, Bob, and Charlie are all in Hub A.  Hub A has Group 1 and 2.  Alice and Bob are in Group 1.  Charlie is in Group 2.  Group 1 has Project X and Y.  Alice is in both projects.  Bob is only in project X.  Group 2 has Project Z.  Charlie is in project Z.  Therefore, Charlie's instance is Hub-A/Group-2/Project-Z.](/images/guides/instances/providers1.avif "Hub / group / project hierarchy")
 
 The hub/group/project hierarchy that makes up an IBM Quantum instance.
 
@@ -196,7 +196,7 @@ Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) pa
 
 To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose *Leave instance*.
 
-![Screenshot of the Account page.](/images/guides/leaving1.avif "Leave instance")
+![Screenshot of the Account page.](/images/guides/instances/leaving1.avif "Leave instance")
 </LegacyContent>
 
 ## Delete an instance
