Reorganize Accounts and plans section

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -3,7 +3,7 @@ title: Instances
 description: What IBM Quantum Platform instances are and how to use them
 ---
 
-# Instances
+# Create and manage instances
 
 <LegacyContent>
 <Admonition type="note">
