--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -378,6 +378,8 @@
   }
  ],
  "metadata": {
+  "title": "Grover's algorithm",
+  "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
   "kernelspec": {
    "display_name": "ibm-learn-cts",
    "language": "python",
