--- a/docs/tutorials/qopt-example.ipynb
+++ b/docs/tutorials/qopt-example.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "The Max-Cut problem is an optimization problem that is hard to solve (more specifically, it is an *NP-hard* problem) with a number of different applications in clustering, network science, and statistical physics. This tutorial considers a graph of nodes connected by vertices, and aims to partition it into separate graphs such that they are both as large as possible. Put another way, the goal of this problem is to partition the nodes of a graph into two sets such that the number of edges traversed by this cut is maximized.\n",
     "\n",
-    "![Illustration of a max-cut problem](images/maxcut-illustration.png)"
+    "![Illustration of a max-cut problem](/images/tutorials/maxcut-illustration.avif)"
    ]
   },
   {
@@ -303,7 +303,7 @@
     "\n",
     "The quantum circuit that you generate is **parametrized** by $\\gamma_i$ and $\\beta_i$, so you can try out different values of $\\gamma_i$ and $\\beta_i$ and sample from the resulting state.\n",
     "\n",
-    "![Circuit diagram with QAOA layers](images/circuit-diagram.png)\n",
+    "![Circuit diagram with QAOA layers](/images/tutorials/circuit-diagram.avif)\n",
     "\n",
     "\n",
     "In this case, you will try an example with one QAOA layer that contains two parameters: $\\gamma_1$ and $\\beta_1$."
@@ -483,7 +483,7 @@
     "\n",
     "The primitives offer a variety of [execution modes](https://docs.quantum.ibm.com/run/execution-modes) to schedule workloads on quantum devices, and a QAOA workflow runs iteratively in a session.\n",
     "\n",
-    "![Illustration showing the behavior of Single job, Batch, and Session runtime modes.](images/runtime-modes.png)\n",
+    "![Illustration showing the behavior of Single job, Batch, and Session runtime modes.](/images/tutorials/runtime-modes.avif)\n",
     "\n",
     "You can plug the sampler-based cost function into the SciPy minimizing routine to find the optimal parameters."
    ]
@@ -1358,15 +1358,11 @@
    "id": "b4a9cf43",
    "metadata": {},
    "source": [
-    "## Tutorial Survey\n",
-    "<table style=\"width: 100%;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td style=\"width: 10%;\"><img src=\"https://learning-api.quantum.ibm.com/assets/53171443-b07b-4ae6-a4be-9aec32a854f5\" alt=\"Survey\" width=\"100%\" height=\"100%\"></td>\n",
-    "<td style=\"width: 80%;\"><strong><a title=\"Tutorial Survey\" href=\"https://your.feedback.ibm.com/jfe/form/SV_cNHi0H1YIagQZ9Q\" target=\"_blank\">Tutorial Survey</a></strong><br>Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
+     "## Tutorial survey\n",
+     "\n",
+     "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+     "\n",
+     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cNHi0H1YIagQZ9Q)"
    ]
   },
   {
