Fix spelling errors

--- a/docs/guides/cloud-account-structure.mdx
+++ b/docs/guides/cloud-account-structure.mdx
@@ -49,7 +49,7 @@ Performing actions often requires a combination of platform management and servi
   </Admonition>
 - Running jobs requires the `writer` service access role and `viewer` platform management role access to the instance.
 
-When creating an access policy (either on an access group or for a user), you can check which actions are part of the role by reviwing the description. For example `quantum-computing.job.create - Create a job to run a program`.
+When creating an access policy (either on an access group or for a user), you can check which actions are part of the role by reviewing the description. For example `quantum-computing.job.create - Create a job to run a program`.
 
 The following table provides examples for some of the platform management actions that users can take within the context of the Qiskit Runtime service.
 
