--- a/docs/guides/manage-appid.mdx
+++ b/docs/guides/manage-appid.mdx
@@ -140,7 +140,7 @@ The steps to implement this setup are:
 6. The cloud administrator assigns access by adding users to the access groups that give them access to the projects:
    * Fatima is given access to the `ml` project.
    * Ravi is given access to the `finance` project.
-   * Amyra is given access to the `ml` and `finanace` projects.
+   * Amyra is given access to the `ml` and `finance` projects.
 6. Users can log in through the ID provider URL, create API keys, and work with their projects' service instances.
 
 ## Next steps
