--- a/docs/tutorials/qopt-example.ipynb
+++ b/docs/tutorials/qopt-example.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5d52815f",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
+    "{/* cspell:ignore rarr, QUBO, elist, fval */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc51e7bf-e582-49ba-93f8-035624d56ccf",
    "metadata": {},
    "source": [
